# catccos

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  catccos_operator.h  operator_host.h  operator_registry.h  run_all_examples.sh
examples/allgather_matmul/: CMakeLists.txt  README.md  allgather_matmul_device.h  allgather_matmul_host.h  allgather_matmul_wrapper.cpp  main.cpp
examples/allgather_matmul_ascend950/: CMakeLists.txt  README.md  allgather_matmul_device_ascend950.h  allgather_matmul_host_ascend950.h  main.cpp
examples/allgather_matmul_dequant/: CMakeLists.txt  allgather_matmul_dequant_device.h  allgather_matmul_dequant_host.h  allgather_matmul_dequant_padding_device.h  main.cpp
examples/allgather_matmul_dequant_bias/: CMakeLists.txt  README.md  allgather_matmul_dequant_bias_device.h  allgather_matmul_dequant_bias_host.h  main.cpp
examples/allgather_matmul_rdma/: CMakeLists.txt  README.md  allgather_matmul_rdma_device.h  allgather_matmul_rdma_host.h  main.cpp
examples/allgather_matmul_remote_read/: CMakeLists.txt  README.md  allgather_matmul_remote_read_device.h  allgather_matmul_remote_read_host.h  main.cpp
examples/allgather_matmul_w4a4/: CMakeLists.txt  README.md  allgather_matmul_w4a4_device.h  allgather_matmul_w4a4_host.h  main.cpp
examples/allgather_matmul_with_gather_result/: CMakeLists.txt  README.md  allgather_matmul_with_gather_result_device.h  allgather_matmul_with_gather_result_host.h  main.cpp
examples/alltoallv_gmm_v2/: CMakeLists.txt  README.md  alltoallv_gmm_v2_device.h  alltoallv_gmm_v2_host.h  main.cpp
examples/alltoallv_grouped_matmul/: CMakeLists.txt  README.md  alltoallv_grouped_matmul_device.h  alltoallv_grouped_matmul_host.h  main.cpp
examples/ascend950_allgather_matmul/: CMakeLists.txt  README.md  ascend950_allgather_matmul_device.h  ascend950_allgather_matmul_host.h  main.cpp
examples/ascend950_allgather_matmul_udma/: CMakeLists.txt  ascend950_allgather_matmul_udma_device.h  ascend950_allgather_matmul_udma_host.h  main.cpp
examples/ascend950_alltoall_matmul/: CMakeLists.txt  README.md  ascend950_alltoall_matmul_device.h  ascend950_alltoall_matmul_host.h  main.cpp
examples/ascend950_alltoallv_grouped_matmul/: CMakeLists.txt  README.md  ascend950_alltoallv_grouped_matmul_device.h  ascend950_alltoallv_grouped_matmul_host.h  main.cpp
examples/ascend950_dispatch_ffn_combine/: CMakeLists.txt  ascend950_dispatch_ffn_combine_device.h  ascend950_dispatch_ffn_combine_host.h  main.cpp
examples/ascend950_fp4_mx_allgather_matmul/: CMakeLists.txt  README.md  ascend950_fp4_mx_allgather_matmul_device.h  ascend950_fp4_mx_allgather_matmul_host.h  main.cpp
examples/ascend950_fp4_mx_alltoallv_grouped_matmul/: CMakeLists.txt  README.md  ascend950_fp4_mx_alltoallv_grouped_matmul_device.h  ascend950_fp4_mx_alltoallv_grouped_matmul_host.h  main.cpp
examples/ascend950_fp4_mx_grouped_matmul_alltoallv/: CMakeLists.txt  README.md  ascend950_fp4_mx_grouped_matmul_alltoallv_device.h  ascend950_fp4_mx_grouped_matmul_alltoallv_host.h  main.cpp
examples/ascend950_fp4_mx_matmul_reduce_scatter/: CMakeLists.txt  README.md  ascend950_fp4_mx_matmul_reduce_scatter_device.h  ascend950_fp4_mx_matmul_reduce_scatter_host.h  main.cpp
examples/ascend950_fp8_mx_allgather_matmul/: CMakeLists.txt  README.md  ascend950_fp8_mx_allgather_matmul_device.h  ascend950_fp8_mx_allgather_matmul_host.h  main.cpp
examples/ascend950_fp8_mx_alltoallv_grouped_matmul/: CMakeLists.txt  README.md  ascend950_fp8_mx_alltoallv_grouped_matmul_device.h  ascend950_fp8_mx_alltoallv_grouped_matmul_host.h  main.cpp
examples/ascend950_fp8_mx_grouped_matmul_alltoallv/: CMakeLists.txt  README.md  ascend950_fp8_mx_grouped_matmul_alltoallv_device.h  ascend950_fp8_mx_grouped_matmul_alltoallv_host.h  main.cpp
examples/ascend950_grouped_matmul_alltoallv/: CMakeLists.txt  README.md  ascend950_grouped_matmul_alltoallv_device.h  ascend950_grouped_matmul_alltoallv_host.h  main.cpp
examples/ascend950_matmul_alltoall/: CMakeLists.txt  README.md  ascend950_matmul_alltoall_device.h  ascend950_matmul_alltoall_host.h  main.cpp
examples/ascend950_matmul_reduce_scatter/: CMakeLists.txt  README.md  ascend950_matmul_reduce_scatter_device.h  ascend950_matmul_reduce_scatter_host.h  main.cpp
examples/ascend950_mx_quant_allgather/: CMakeLists.txt  README.md  main.cpp  mx_quant_allgather_device.h  mx_quant_allgather_host.h
examples/ascend950_mxfp8_matmul_reduce_scatter/: CMakeLists.txt  README.md  ascend950_mxfp8_matmul_reduce_scatter_device.h  ascend950_mxfp8_matmul_reduce_scatter_host.h  main.cpp
examples/ascend950_quant_allgather/: CMakeLists.txt  README.md  main.cpp  quant_allgather_device.h  quant_allgather_host.h
examples/ascend950_quant_alltoall/: CMakeLists.txt  README.md  main.cpp  quant_alltoall_device.h  quant_alltoall_host.h
examples/aux_ops/: allgather_kernel.h  allgather_kernel_with_flag.h  group_dequant_swiglu.h  group_swiglu.h
examples/dispatch_ffn_combine/: CMakeLists.txt  README.md  dispatch_ffn_combine_device.h  dispatch_ffn_combine_host.h  main.cpp
examples/dispatch_gmm/: CMakeLists.txt  alltoallv_gmm_v2_device.h  alltoallv_gmm_v2_host.h  main.cpp
examples/dispatch_gmm_dequant_swiglu/: CMakeLists.txt  dispatch_gmm_dequant_swiglu_device.h  dispatch_gmm_dequant_swiglu_host.h  dispatch_policy_custom.h  main.cpp
examples/dispatch_gmm_swiglu/: CMakeLists.txt  alltoallv_gmm_v2_device.h  alltoallv_gmm_v2_host.h  main.cpp
examples/dynamic_tiling/: CMakeLists.txt  README.md  main.cpp
examples/gmm_alltoallv_v2/: CMakeLists.txt  README.md  gmm_alltoallv_v2_device.h  gmm_alltoallv_v2_host.h  main.cpp
examples/grouped_matmul_alltoallv/: CMakeLists.txt  README.md  grouped_matmul_alltoallv_device.h  grouped_matmul_alltoallv_host.h  main.cpp
examples/grouped_matmul_alltoallv_tla/: CMakeLists.txt  README.md  grouped_matmul_alltoallv_tla_device.h  grouped_matmul_alltoallv_tla_host.h  main.cpp
examples/matmul_allreduce/: CMakeLists.txt  README.md  main.cpp  matmul_allreduce_device.h  matmul_allreduce_host.h
(+363 files in other folders)
